<resources>
    <string name="app_name">Photographer Booking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_start">Mulai!</string>
    <string name="image_view_client">Image View Client</string>
    <string name="search_photographer">Saya Mencari Fotografer</string>
    <string name="image_view_photographer">Image View Photographer</string>
    <string name="be_a_photographer">Seorang Fotografer</string>
    <string name="continue_string">Lanjutkan</string>
    <string name="personal_detail">Data Personal Anda</string>
    <string name="first_name">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="email_address">Alamat Email</string>
    <string name="protect_your_account_with_password">Lindungi Akun Anda Dengan Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="password_harus_terdiri_dari">Password harus terdiri dari :</string>
    <string name="huruf_kecil">Huruf kecil</string>
    <string name="angka">Angka</string>
    <string name="huruf_kapital">Huruf Kapital</string>
    <string name="minimal_8_karakter">Minimal 8 Karakter</string>
    <string name="password_tidak_sama">Password Tidak Sama</string>
    <string name="find_or_be_a_personal_photographer">Cari atau Pasarkan Jasa Layanan Fotografi Anda</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="photo_profil">Foto Profil</string>
    <string name="city">Kota</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="save">Simpan</string>
    <string name="tell_us_about">Ceritakan tentang anda.</string>
    <string name="home">Beranda</string>
    <string name="order">Pesanan</string>
    <string name="inbox">Pesan</string>
    <string name="profile">Profil</string>
    <string name="portfolio_image">Foto Portofolio</string>
    <string name="edit_button">edit button</string>
    <string name="about_me">Tentang Saya</string>
    <string name="add_portfolio">Tambahkan Potofolio</string>
    <string name="add_package">Tambahkan Paket</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="select_image">Pilih Foto</string>
    <string name="save_image">Simpan Foto</string>
    <string name="change_profile_picture">Ubah Foto Profil</string>
    <string name="delete_image">Hapus Foto</string>
    <string name="change_image">Ubah Foto</string>
    <string name="delete_button">Delete Button</string>
    <string name="add_benefit">Tambah Keuntungan</string>
    <string name="input_package_title">Masukan Judul Paket</string>
    <string name="select_photoshoot_type">Pilih Tipe Pemotretan</string>
    <string name="daily">Harian</string>
    <string name="hourly">Per-jam</string>
    <string name="input_photoshoot_price">Masukan Harga Pemotretan</string>
    <string name="input_photoshoot_benefit">Masukan Keuntungan Pemotretan</string>
    <string name="button_add_benefit">Button Add Benefit</string>

    <string-array name="array_filter">
        <item>Semua</item>
        <item>Aceh</item>
        <item>Sumatera Utara</item>
        <item>Sumatera Barat</item>
        <item>Sumatera Selatan</item>
        <item>Riau</item>
        <item>Kepulauan Riau</item>
        <item>Jambi</item>
        <item>Kepulauan Bangka Belitung</item>
        <item>Bengkulu</item>
        <item>Lampung</item>
        <item>DKI Jakarta</item>
        <item>Banten</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>DI Yogyakarta</item>
        <item>Jawa Timur</item>
        <item>Bali</item>
        <item>Nusa Tenggara Barat</item>
        <item>Nusa Tenggara Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Sulawesi Utara</item>
        <item>Gorontalo</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Barat</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tenggara</item>
        <item>Maluku</item>
        <item>Maluku Utara</item>
        <item>Papua</item>
        <item>Papua Barat</item>
    </string-array>

    <string-array name="photoshoot_package">
        <item>Pemotretan Pernikahan</item>
        <item>Pemotretan Kelulusan</item>
        <item>Pemotretan Acara</item>
        <item>Pemotretan Endorsment</item>
    </string-array>

    <string-array name="provinsi_indonesia">
        <item>Aceh</item>
        <item>Sumatera Utara</item>
        <item>Sumatera Barat</item>
        <item>Sumatera Selatan</item>
        <item>Riau</item>
        <item>Kepulauan Riau</item>
        <item>Jambi</item>
        <item>Kepulauan Bangka Belitung</item>
        <item>Bengkulu</item>
        <item>Lampung</item>
        <item>DKI Jakarta</item>
        <item>Banten</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>DI Yogyakarta</item>
        <item>Jawa Timur</item>
        <item>Bali</item>
        <item>Nusa Tenggara Barat</item>
        <item>Nusa Tenggara Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Sulawesi Utara</item>
        <item>Gorontalo</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Barat</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tenggara</item>
        <item>Maluku</item>
        <item>Maluku Utara</item>
        <item>Papua</item>
        <item>Papua Barat</item>
    </string-array>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="explore">Explore</string>
    <string name="photographer_profile_picture">Foto Profil Fotografer</string>
    <string name="logout">Keluar</string>
    <string name="you_can_contact_photographer_on">Anda dapat menghubungi fotografer melalui</string>
    <string name="phone">Telepon</string>
    <string name="button_close">Button Close</string>
    <string name="show_detail">Lihat Rincian</string>
    <string name="package_benefit">Keuntungan Paket</string>
    <string name="photoshoot_price">Harga Pemotretan</string>
    <string name="order_this_package">Pesan Paket Ini</string>
    <string name="photoshoot_time">Waktu Pemotretan</string>
    <string name="location">Lokasi</string>
    <string name="photographer">Fotografer</string>
    <string name="select_photoshoot_date">Pilih Tanggal Pemotretan</string>
    <string name="photoshoot_package">Paket Pemotretan</string>
    <string name="photoshoot_type">Tipe Pemotretan</string>
    <string name="select_photoshoot_time">Pilih Waktu Pemotretan</string>
    <string name="about_photographer">Tentang Fotografer</string>
    <string name="button_back">Button Back</string>
    <string name="order_review">Review Pesanan</string>
    <string name="cart">Keranjang</string>
    <string name="type">Tipe</string>
    <string name="paket">Paket</string>
    <string name="date">Tanggal</string>
    <string name="time">Waktu</string>
    <string name="total_fee">Total Biaya :</string>
    <string name="order_success">Pesanan Berhasil</string>
    <string name="please_wait_photographer_to_confirmation_your_order">Mohon tunggu fotografer melakukan konfirmasi dari pesanan anda</string>
    <string name="close">Tutup</string>
    <string name="order_this_photographer">Pesan Fotografer</string>
    <string name="image_wait_confirmation">Image Wait Confirmation</string>
    <string name="your_client">Pelanggan Anda</string>
    <string name="status_order_1">Menunggu Konfirmasi</string>
    <string name="status_order_2">Terkonfirmasi, Menunggu Pembayaran</string>
    <string name="status_order_3">Pemotretan Selesai</string>
    <string name="status_order_4">Pesanan Telah Dibayar</string>
    <string name="status_order_5">Pemotretan Selesai dan Telah Direview</string>
    <string name="show_payment_image">Perlihatkan Bukti Pembayaran</string>
    <string name="client">Pelanggan</string>
    <string name="you_can_contact_client_on">Kamu dapat menghubungi pelanggan melalui :</string>
    <string name="confirm_order">Konfirmasi Pesanan</string>
    <string name="your_photographer">Fotografer Anda</string>
    <string name="add_payment_method">Tambahkan Metode Pembayaran</string>
    <string name="input_your_dana_account">Masukan nomor Dana anda</string>
    <string name="input_your_gopay_account">Masukan nomor Gopay anda</string>
    <string name="input_your_link_aja_account">Masukan nomor Link Aja anda</string>
    <string name="input_your_ovo_account">Masukan nomor OVO anda</string>
    <string name="make_payment">Lakukan Pembayaran</string>
    <string name="select_payment_method">Pilih Metode Pembayaran</string>
    <string name="upload_payment_proof">Unggah Bukti Pembayaran</string>
    <string name="pay_order">Bayar Pesanan</string>
    <string name="payment_image">Foto Bukti Pembayaran</string>
    <string name="order_image">Foto Bukti Pembayaran</string>
    <string name="set_schedule">Atur Jadwal</string>
    <string name="filter">Filter</string>
    <string name="select_city">Pilih Kota</string>
    <string name="photoshoot_review">Review Pemotretan</string>
    <string name="score">Nilai</string>
    <string name="add_score_1_5">Tambahkan Nilai 1–5</string>
    <string name="your_review">Review Anda</string>
    <string name="score_">Nilai :</string>
    <string name="review">Review :</string>
    <string name="review_">Review</string>
    <string name="photographer_review">Review Fotografer</string>
    <string name="client_review">Review Pelanggan</string>
    <string name="edit_package">Ubah Paket</string>
    <string name="jumlah_pesanan_masuk">Jumlah Pesanan Masuk</string>
    <string name="jumlah_pesanan_berdasarkan_waktu">Jumlah Pesanan Berdasarkan Waktu</string>
    <string name="tahun_ini">Tahun Ini</string>
    <string name="bulan_ini">Bulan Ini</string>
    <string name="hari_ini">Hari Ini</string>
    <string name="jumlah_pesanan_berdasarkan_status">Jumlah Pesanan Berdasarkan Status</string>
    <string name="menunggu_konfirmasi">Menunggu Konfirmasi</string>
    <string name="terkonfirmasi">Terkonfirmasi</string>
    <string name="telah_dibayar">Telah Dibayar</string>
    <string name="selesai">Selesai</string>
    <string name="direview">Direview</string>
    <string name="jumlah_pemotretan_berdasarkan_waktu">Jumlah Pemotretan Berdasarkan Waktu</string>
    <string name="provinsi">Provinsi</string>
    <string name="nomor_ovo">Nomor Ovo</string>
    <string name="nomor_link_aja">Nomor Link Aja</string>
    <string name="nomor_gopay">Nomor Gopay</string>
    <string name="nomor_dana">Nomor Dana</string>
</resources>