<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.auth.register.fragment.RegisterAddPasswordFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/protect_your_account_with_password"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true"
        android:id="@+id/etConfirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
        android:visibility="gone"
        android:id="@+id/passwordChecker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:columnCount="4"
        android:padding="8dp"
        android:rowCount="3"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLayout">

        <TextView
            android:id="@+id/passwordTerdiri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_marginTop="16dp"
            android:text="@string/password_harus_terdiri_dari"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tvHurufKecil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_marginStart="6dp"
            android:drawablePadding="8dp"
            android:text="@string/huruf_kecil" />

        <TextView
            android:id="@+id/tvAngka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_marginStart="6dp"
            android:drawablePadding="8dp"
            android:text="@string/angka" />

        <TextView
            android:id="@+id/tvHurufKapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:layout_marginStart="6dp"
            android:drawablePadding="8dp"
            android:text="@string/huruf_kapital" />

        <TextView
            android:id="@+id/tvMinKarakter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_marginStart="6dp"
            android:drawablePadding="8dp"
            android:text="@string/minimal_8_karakter" />

    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:enabled="false"
        android:background="@drawable/button_enabled"
        android:text="@string/continue_string"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>