<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.auth.register.fragment.RegisterAddDataFragment">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        android:layout_marginBottom="@dimen/margin_content"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/personal_detail"
                android:layout_marginTop="64dp"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="32dp"
                android:text="@string/fullname"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etFullname"
                android:hint="@string/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text" />

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etEmail"
                android:hint="@string/last_name"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="" />

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/city"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etCity"
                android:hint="@string/city"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="" />

            <TextView
                android:layout_marginTop="16dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etPhoneNumber"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_enabled"
        android:layout_marginBottom="64dp"
        android:text="@string/continue_string"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>