<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.photographer.activity.order.PhotographerOrderDetailActivity">

    <include
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appBarLayout"
        layout="@layout/toolbar" />

    <TextView
        android:layout_marginTop="@dimen/margin_content"
        android:id="@+id/orderStatus"
        android:background="@drawable/bg_border_green"
        android:layout_marginHorizontal="@dimen/margin_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/status_order_1"
        android:padding="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/orderStatus"
        android:id="@+id/layoutCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_content"
        android:background="@drawable/bg_border"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/cart"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/clientTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/client"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/cart" />

        <ImageView
            android:id="@+id/clientProfilePicture"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/photographer_profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clientTitle" />

        <TextView
            android:id="@+id/clientName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_content"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/clientProfilePicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/clientProfilePicture"
            app:layout_constraintTop_toTopOf="@id/clientProfilePicture" />

        <TextView
            android:id="@+id/typeTitle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/type"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clientProfilePicture" />

        <TextView
            android:id="@+id/typeContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/typeTitle"
            app:layout_constraintTop_toTopOf="@id/typeTitle" />

        <TextView
            android:id="@+id/packageTitle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/paket"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeTitle" />

        <TextView
            android:id="@+id/packageContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/typeTitle"
            app:layout_constraintTop_toTopOf="@id/packageTitle" />

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/date"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/packageTitle" />

        <TextView
            android:id="@+id/dateContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/typeTitle"
            app:layout_constraintTop_toTopOf="@id/dateTitle" />

        <TextView
            android:id="@+id/timeTitle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/time"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dateTitle" />

        <TextView
            android:id="@+id/timeContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/typeTitle"
            app:layout_constraintTop_toTopOf="@id/timeTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/layoutCart"
        android:layout_marginTop="16dp"
        android:id="@+id/layoutFee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/margin_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/total_fee"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/layoutFee"
        android:id="@+id/layoutContant"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/margin_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/contactClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/you_can_contact_client_on"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/email"
            app:drawableTopCompat="@drawable/ic_email"
            app:layout_constraintEnd_toStartOf="@id/tvPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contactClient" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/phone"
            app:drawableTopCompat="@drawable/ic_phone"
            app:layout_constraintStart_toEndOf="@id/tvEmail"
            app:layout_constraintTop_toBottomOf="@id/contactClient" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/confirmOrder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_content"
        android:background="@drawable/button_enabled"
        android:text="@string/confirm_order"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/open_sans_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>